# Refactored
  - LoginForm and RegisterForm